infrastructure/optional/postgresql/pgadmin/k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "pgadmin"
  namespace: "infrastructure"
  labels:
    app.kubernetes.io/name: "pgadmin"
    app.kubernetes.io/managed-by: "local"
    app.kubernetes.io/version: "6.10"
    app.kubernetes.io/component: "postgres"
    app.kubernetes.io/part-of: "infrastructure"
spec:
  ports:
    - name: tomcat
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
