infrastructure/optional/postgresql/pgadmin/k8s/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "pgadmin"
  namespace: "infrastructure"
  labels:
    app.kubernetes.io/name: "pgadmin"
    app.kubernetes.io/managed-by: "local"
    app.kubernetes.io/version: "6.10"
    app.kubernetes.io/component: "postgres"
    app.kubernetes.io/part-of: "infrastructure"
spec:
  rules:
  - host: pgadmin.local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  tls:
  - hosts:
    - pgadmin.local.dev
    secretName: pgadmin-cert
